--- a/stylus/base.styl
+++ b/stylus/base.styl
@@ -1,26 +1,24 @@
-@charset "utf-8";
-
 /*
  * Overview: CSS3 Taobao Mobile taoplus Style
  * Author: mittya.com
  */
 
 
-/** Icon font **/
+/* Icon font */
 @font-face
-  font-family: 'iconfont';
-  src: url('/lib/fonts/iconfont.eot');
+  font-family: 'iconfont'
+  src: url('/lib/fonts/iconfont.eot')
   src: url('/lib/fonts/iconfont.eot?#iefix') format('embedded-opentype'),
-  url('/lib/fonts/iconfont.woff') format('woff'),
-  url('/lib/fonts/iconfont.ttf') format('truetype'),
-  url('/lib/fonts/iconfont.svg#uxiconfont') format('svg');
+       url('/lib/fonts/iconfont.woff') format('woff'),
+       url('/lib/fonts/iconfont.ttf') format('truetype'),
+       url('/lib/fonts/iconfont.svg#uxiconfont') format('svg')
 
 .iconfont
   font-family: "iconfont"
   font-style: normal
 
 
-/** Reset **/
+/* Reset */
 html
 body
 div
@@ -43,6 +41,8 @@ button
 body
   background-color: #f1f1f1
 
+
+/* Fork */
 .fork
   position: absolute
   top: 0
