--- a/src/stylus/base.styl
+++ b/src/stylus/base.styl
@@ -7,11 +7,11 @@
 /* Icon font */
 @font-face
   font-family: 'iconfont'
-  src: url('/lib/fonts/iconfont.eot')
-  src: url('/lib/fonts/iconfont.eot?#iefix') format('embedded-opentype'),
-       url('/lib/fonts/iconfont.woff') format('woff'),
-       url('/lib/fonts/iconfont.ttf') format('truetype'),
-       url('/lib/fonts/iconfont.svg#uxiconfont') format('svg')
+  src: url('../fonts/iconfont.eot')
+  src: url('../fonts/iconfont.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/iconfont.woff') format('woff'),
+       url('../fonts/iconfont.ttf') format('truetype'),
+       url('../fonts/iconfont.svg#uxiconfont') format('svg')
 
 .iconfont
   font-family: "iconfont"
