--- a/src/styl/taoplus.styl
+++ b/src/styl/taoplus.styl
@@ -1,7 +1,12 @@
+/*
+ * Overview: CSS3 Taobao Mobile taoplus Style
+ * Author: mittya
+ * Code: https://github.com/mittya/css3-taobao-taoplus
+ */
+
 @import "base"
 
-
-/* button */
+/* Tao button */
 .btn
   position: fixed
   left: 16px
@@ -11,7 +16,7 @@
   height: 46px
   line-height: 38px
   text-align: center
-  cursor: default
+  cursor: pointer;
   border: 3px solid #f9f9f9
   border-radius: 50%
   background-color: #ff4400
@@ -27,7 +32,7 @@
     color: #fff
 
 
-/* taoplus */
+/* Taoplus */
 .taoplus
   position: fixed
   left: 32px
@@ -158,7 +163,7 @@
       mask: none
 
 
-/* overlay */
+/* Overlay */
 .overlay
   visibility: hidden
   width: 100%
@@ -178,7 +183,7 @@
     opacity: 1
 
 
-/* 测试圆心
+/* Center of a circle
 .taoplus:after
   content: ''
   display: block
