Fix mobile web link highlight

--- a/src/styl/base.styl
+++ b/src/styl/base.styl
@@ -17,6 +17,9 @@ ul
 a
 button
   outline: none
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  user-select: none;
 
 body
   background-color: #f1f1f1
